--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -167,7 +167,6 @@
     "edit": {
       "title": "Modify notice"
     },
-    "noItems": "There are no notices yet.",
     "confirm": {
       "publishNowTitle": "Publishing a notice",
       "publishNowMessage": "Are you sure you want to publish this notice? This operation cannot be undone.",
@@ -179,7 +178,8 @@
       "updateSuccess": "Successfully updated notice \"{{ name }}\"",
       "publishSuccess": "Successfully published notice \"{{ name }}\"",
       "deleteSuccess": "Successfully published notice \"{{ name }}\""
-    }
+    },
+    "noItems": "There are no notices yet."
   },
   "grade": {
     "title": {
@@ -277,7 +277,7 @@
     "propose": "Propose the final grade",
     "change": "Change the proposed final grade",
     "confirm": "Confirm the final grade",
-    "noItems": "There are no grades yet"
+    "noItems": "There are no grades yet."
   },
   "user": {
     "grades": "Grades"
@@ -387,7 +387,7 @@
         "deleteTitle": "Deleting a subject category",
         "deleteMessage": "Are you sure you want to delete \"{{name}}\" category? This operation cannot be undone."
       },
-      "noItems": "No subject categories yet."
+      "noItems": "There are no subject categories yet."
     },
     "classes": {
       "title": "Classes management",
@@ -418,7 +418,7 @@
       "create": {
         "title": "Create new subject"
       },
-      "noItems": "No subjects yet.",
+      "noItems": "There are no subjects yet.",
       "details": {
         "category": "Subject category",
         "class": "Class",
@@ -487,7 +487,7 @@
           "deactivateSuccess": "User \"{{name}}\" deactivated."
         }
       },
-      "noItems": "No users yet."
+      "noItems": "There are no users yet."
     }
   },
   "404": {
