--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -16,6 +16,7 @@
       "home": "Home",
       "subjects": "Subjects",
       "settings": "Settings",
+      "grades": "Grades",
       "signOut": "Sign out"
     }
   },
@@ -59,6 +60,18 @@
       "task": "Create new task",
       "homework": "Create new homework"
     }
+  },
+  "grades": {
+    "title": "All grades",
+    "table": {
+      "key": {
+        "subjectName": "Subject",
+        "averageGrade": "Average",
+        "proposedGrade": "Proposed",
+        "finalGrade": "Final"
+      }
+    },
+    "noItems": "No grades yet."
   },
   "task": {
     "title": {
